Fix contrast ratios

--- a/css/python-gsoc.css
+++ b/css/python-gsoc.css
@@ -68,6 +68,11 @@ label {
 .content-subhead {
     color: #489eba;
 }
+
+.content-subhead.dark-background {
+    color: #EBEBEB !important;
+}
+
 .content-subhead i {
     margin-right: 7px;
 }
